--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>ITMD-361 Lab 1</h3>
-  <p>&amp; Hello world. This is my first website!</p>
+  <p>Hello world. This is my first website!</p>
   <p>My name is Patryk Oleskiewicz, I am majoring in ITM and in my spare time I like to play video games, play the Pokemon Trading Card Game with my friends, and also mess around with some tech such as network switches and Raspberry Pis'.</p>
 </body>
 </html>
